sj6re/src/pp4/y.output
Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VarDecl
    5     | FnDecl
    6     | ClassDecl
    7     | InterfaceDecl

    8 VarDecl: Variable ';'

    9 Variable: Type T_Identifier

   10 Type: T_Int
   11     | T_Bool
   12     | T_String
   13     | T_Double
   14     | T_Identifier
   15     | Type T_Dims

   16 FnDecl: FnHeader StmtBlock

   17 FnHeader: Type T_Identifier '(' Formals ')'
   18         | T_Void T_Identifier '(' Formals ')'

   19 Formals: FormalList
   20        | /* empty */

   21 FormalList: FormalList ',' Variable
   22           | Variable

   23 ClassDecl: T_Class T_Identifier ClassParent ClassInterface '{' FieldList '}'

   24 ClassParent: T_Extends T_Identifier
   25            | /* empty */

   26 ClassInterface: T_Implements InterfaceList
   27               | /* empty */

   28 InterfaceList: InterfaceList ',' T_Identifier
   29              | T_Identifier

   30 Field: VarDecl
   31      | FnDecl

   32 FieldList: FieldList Field
   33          | /* empty */

   34 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList '}'

   35 PrototypeList: PrototypeList Prototype
   36              | /* empty */

   37 Prototype: Type T_Identifier '(' Formals ')' ';'
   38          | T_Void T_Identifier '(' Formals ')' ';'

   39 VarDecls: VarDecls VarDecl
   40         | VarDecl

   41 StmtList: StmtList Stmt
   42         | Stmt

   43 StmtBlock: '{' VarDecls StmtList '}'
   44          | '{' VarDecls '}'
   45          | '{' StmtList '}'
   46          | '{' '}'

   47 ExprS: Expr
   48      | /* empty */

   49 Stmt: ExprS ';'
   50     | IfStmt
   51     | WhileStmt
   52     | ForStmt
   53     | BreakStmt
   54     | ReturnStmt
   55     | PrintStmt
   56     | StmtBlock

   57 Expr: LValue '=' Expr
   58     | Constant
   59     | LValue
   60     | T_This
   61     | Call
   62     | '(' Expr ')'
   63     | Expr '+' Expr
   64     | Expr '-' Expr
   65     | Expr '*' Expr
   66     | Expr '/' Expr
   67     | Expr '%' Expr
   68     | '-' Expr
   69     | Expr '<' Expr
   70     | Expr T_LessEqual Expr
   71     | Expr '>' Expr
   72     | Expr T_GreaterEqual Expr
   73     | Expr T_Equal Expr
   74     | Expr T_NotEqual Expr
   75     | Expr T_And Expr
   76     | Expr T_Or Expr
   77     | '!' Expr
   78     | T_ReadInteger '(' ')'
   79     | T_ReadLine '(' ')'
   80     | T_New '(' T_Identifier ')'
   81     | T_NewArray '(' Expr ',' Type ')'

   82 ElseO: T_Else Stmt
   83      | /* empty */

   84 IfStmt: T_If '(' Expr ')' Stmt ElseO

   85 WhileStmt: T_While '(' Expr ')' Stmt

   86 ForStmt: T_For '(' ExprS ';' Expr ';' ExprS ')' Stmt

   87 ReturnStmt: T_Return ExprS ';'

   88 BreakStmt: T_Break ';'

   89 ExprPC: ExprPC ',' Expr
   90       | Expr

   91 PrintStmt: T_Print '(' ExprPC ')' ';'

   92 LValue: T_Identifier
   93       | Expr '.' T_Identifier
   94       | Expr '[' Expr ']'

   95 Call: T_Identifier '(' Actuals ')'
   96     | Expr '.' T_Identifier '(' Actuals ')'

   97 Actuals: ExprPC
   98        | /* empty */

   99 Constant: T_IntConstant
  100         | T_DoubleConstant
  101         | T_BoolConstant
  102         | T_StringConstant
  103         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 77
'%' (37) 67
'(' (40) 17 18 37 38 62 78 79 80 81 84 85 86 91 95 96
')' (41) 17 18 37 38 62 78 79 80 81 84 85 86 91 95 96
'*' (42) 65
'+' (43) 63
',' (44) 21 28 81 89
'-' (45) 64 68
'.' (46) 93 96
'/' (47) 66
';' (59) 8 37 38 49 86 87 88 91
'<' (60) 69
'=' (61) 57
'>' (62) 71
'[' (91) 94
']' (93) 94
'{' (123) 23 34 43 44 45 46
'}' (125) 23 34 43 44 45 46
error (256)
T_Void (258) 18 38
T_Bool (259) 11
T_Int (260) 10
T_Double (261) 13
T_String (262) 12
T_Class (263) 23
T_LessEqual (264) 70
T_GreaterEqual (265) 72
T_Equal (266) 73
T_NotEqual (267) 74
T_Dims (268) 15
T_And (269) 75
T_Or (270) 76
T_Null (271) 103
T_Extends (272) 24
T_This (273) 60
T_Interface (274) 34
T_Implements (275) 26
T_While (276) 85
T_For (277) 86
T_If (278) 84
T_Else (279) 82
T_Return (280) 87
T_Break (281) 88
T_New (282) 80
T_NewArray (283) 81
T_Print (284) 91
T_ReadInteger (285) 78
T_ReadLine (286) 79
T_Identifier (287) 9 14 17 18 23 24 28 29 34 37 38 80 92 93 95 96
T_StringConstant (288) 102
T_IntConstant (289) 99
T_DoubleConstant (290) 100
T_BoolConstant (291) 101
NoElse (292)


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
Program (57)
    on left: 1, on right: 0
DeclList (58)
    on left: 2 3, on right: 1 2
Decl (59)
    on left: 4 5 6 7, on right: 2 3
VarDecl (60)
    on left: 8, on right: 4 30 39 40
Variable (61)
    on left: 9, on right: 8 21 22
Type (62)
    on left: 10 11 12 13 14 15, on right: 9 15 17 37 81
FnDecl (63)
    on left: 16, on right: 5 31
FnHeader (64)
    on left: 17 18, on right: 16
Formals (65)
    on left: 19 20, on right: 17 18 37 38
FormalList (66)
    on left: 21 22, on right: 19 21
ClassDecl (67)
    on left: 23, on right: 6
ClassParent (68)
    on left: 24 25, on right: 23
ClassInterface (69)
    on left: 26 27, on right: 23
InterfaceList (70)
    on left: 28 29, on right: 26 28
Field (71)
    on left: 30 31, on right: 32
FieldList (72)
    on left: 32 33, on right: 23 32
InterfaceDecl (73)
    on left: 34, on right: 7
PrototypeList (74)
    on left: 35 36, on right: 34 35
Prototype (75)
    on left: 37 38, on right: 35
VarDecls (76)
    on left: 39 40, on right: 39 43 44
StmtList (77)
    on left: 41 42, on right: 41 43 45
StmtBlock (78)
    on left: 43 44 45 46, on right: 16 56
ExprS (79)
    on left: 47 48, on right: 49 86 87
Stmt (80)
    on left: 49 50 51 52 53 54 55 56, on right: 41 42 82 84 85 86
Expr (81)
    on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    75 76 77 78 79 80 81, on right: 47 57 62 63 64 65 66 67 68 69 70
    71 72 73 74 75 76 77 81 84 85 86 89 90 93 94 96
ElseO (82)
    on left: 82 83, on right: 84
IfStmt (83)
    on left: 84, on right: 50
WhileStmt (84)
    on left: 85, on right: 51
ForStmt (85)
    on left: 86, on right: 52
ReturnStmt (86)
    on left: 87, on right: 54
BreakStmt (87)
    on left: 88, on right: 53
ExprPC (88)
    on left: 89 90, on right: 89 91 97
PrintStmt (89)
    on left: 91, on right: 55
LValue (90)
    on left: 92 93 94, on right: 57 59
Call (91)
    on left: 95 96, on right: 61
Actuals (92)
    on left: 97 98, on right: 95 96
Constant (93)
    on left: 99 100 101 102 103, on right: 58


state 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DeclList       go to state 10
    Decl           go to state 11
    VarDecl        go to state 12
    Variable       go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    FnHeader       go to state 16
    ClassDecl      go to state 17
    InterfaceDecl  go to state 18


state 1

   18 FnHeader: T_Void . T_Identifier '(' Formals ')'

    T_Identifier  shift, and go to state 19


state 2

   11 Type: T_Bool .

    $default  reduce using rule 11 (Type)


state 3

   10 Type: T_Int .

    $default  reduce using rule 10 (Type)


state 4

   13 Type: T_Double .

    $default  reduce using rule 13 (Type)


state 5

   12 Type: T_String .

    $default  reduce using rule 12 (Type)


state 6

   23 ClassDecl: T_Class . T_Identifier ClassParent ClassInterface '{' FieldList '}'

    T_Identifier  shift, and go to state 20


state 7

   34 InterfaceDecl: T_Interface . T_Identifier '{' PrototypeList '}'

    T_Identifier  shift, and go to state 21


state 8

   14 Type: T_Identifier .

    $default  reduce using rule 14 (Type)


state 9

    0 $accept: Program . $end

    $end  shift, and go to state 22


state 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 23
    VarDecl        go to state 12
    Variable       go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    FnHeader       go to state 16
    ClassDecl      go to state 17
    InterfaceDecl  go to state 18


state 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


state 12

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


state 13

    8 VarDecl: Variable . ';'

    ';'  shift, and go to state 24


state 14

    9 Variable: Type . T_Identifier
   15 Type: Type . T_Dims
   17 FnHeader: Type . T_Identifier '(' Formals ')'

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 26


state 15

    5 Decl: FnDecl .

    $default  reduce using rule 5 (Decl)


state 16

   16 FnDecl: FnHeader . StmtBlock

    '{'  shift, and go to state 27

    StmtBlock  go to state 28


state 17

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


state 18

    7 Decl: InterfaceDecl .

    $default  reduce using rule 7 (Decl)


state 19

   18 FnHeader: T_Void T_Identifier . '(' Formals ')'

    '('  shift, and go to state 29


state 20

   23 ClassDecl: T_Class T_Identifier . ClassParent ClassInterface '{' FieldList '}'

    T_Extends  shift, and go to state 30

    $default  reduce using rule 25 (ClassParent)

    ClassParent  go to state 31


state 21

   34 InterfaceDecl: T_Interface T_Identifier . '{' PrototypeList '}'

    '{'  shift, and go to state 32


state 22

    0 $accept: Program $end .

    $default  accept


state 23

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


state 24

    8 VarDecl: Variable ';' .

    $default  reduce using rule 8 (VarDecl)


state 25

   15 Type: Type T_Dims .

    $default  reduce using rule 15 (Type)


state 26

    9 Variable: Type T_Identifier .
   17 FnHeader: Type T_Identifier . '(' Formals ')'

    '('  shift, and go to state 33

    $default  reduce using rule 9 (Variable)


state 27

   43 StmtBlock: '{' . VarDecls StmtList '}'
   44          | '{' . VarDecls '}'
   45          | '{' . StmtList '}'
   46          | '{' . '}'

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 34
    T_This            shift, and go to state 35
    T_While           shift, and go to state 36
    T_For             shift, and go to state 37
    T_If              shift, and go to state 38
    T_Return          shift, and go to state 39
    T_Break           shift, and go to state 40
    T_New             shift, and go to state 41
    T_NewArray        shift, and go to state 42
    T_Print           shift, and go to state 43
    T_ReadInteger     shift, and go to state 44
    T_ReadLine        shift, and go to state 45
    T_Identifier      shift, and go to state 46
    T_StringConstant  shift, and go to state 47
    T_IntConstant     shift, and go to state 48
    T_DoubleConstant  shift, and go to state 49
    T_BoolConstant    shift, and go to state 50
    '-'               shift, and go to state 51
    '!'               shift, and go to state 52
    '('               shift, and go to state 53
    '{'               shift, and go to state 27
    '}'               shift, and go to state 54

    $default  reduce using rule 48 (ExprS)

    VarDecl     go to state 55
    Variable    go to state 13
    Type        go to state 56
    VarDecls    go to state 57
    StmtList    go to state 58
    StmtBlock   go to state 59
    ExprS       go to state 60
    Stmt        go to state 61
    Expr        go to state 62
    IfStmt      go to state 63
    WhileStmt   go to state 64
    ForStmt     go to state 65
    ReturnStmt  go to state 66
    BreakStmt   go to state 67
    PrintStmt   go to state 68
    LValue      go to state 69
    Call        go to state 70
    Constant    go to state 71


state 28

   16 FnDecl: FnHeader StmtBlock .

    $default  reduce using rule 16 (FnDecl)


state 29

   18 FnHeader: T_Void T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 20 (Formals)

    Variable    go to state 72
    Type        go to state 56
    Formals     go to state 73
    FormalList  go to state 74


state 30

   24 ClassParent: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 75


state 31

   23 ClassDecl: T_Class T_Identifier ClassParent . ClassInterface '{' FieldList '}'

    T_Implements  shift, and go to state 76

    $default  reduce using rule 27 (ClassInterface)

    ClassInterface  go to state 77


state 32

   34 InterfaceDecl: T_Interface T_Identifier '{' . PrototypeList '}'

    $default  reduce using rule 36 (PrototypeList)

    PrototypeList  go to state 78


state 33

   17 FnHeader: Type T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 20 (Formals)

    Variable    go to state 72
    Type        go to state 56
    Formals     go to state 79
    FormalList  go to state 74


state 34

  103 Constant: T_Null .

    $default  reduce using rule 103 (Constant)


state 35

   60 Expr: T_This .

    $default  reduce using rule 60 (Expr)


state 36

   85 WhileStmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 80


state 37

   86 ForStmt: T_For . '(' ExprS ';' Expr ';' ExprS ')' Stmt

    '('  shift, and go to state 81


state 38

   84 IfStmt: T_If . '(' Expr ')' Stmt ElseO

    '('  shift, and go to state 82


state 39

   87 ReturnStmt: T_Return . ExprS ';'

    T_Null            shift, and go to state 34
    T_This            shift, and go to state 35
    T_New             shift, and go to state 41
    T_NewArray        shift, and go to state 42
    T_ReadInteger     shift, and go to state 44
    T_ReadLine        shift, and go to state 45
    T_Identifier      shift, and go to state 83
    T_StringConstant  shift, and go to state 47
    T_IntConstant     shift, and go to state 48
    T_DoubleConstant  shift, and go to state 49
    T_BoolConstant    shift, and go to state 50
    '-'               shift, and go to state 51
    '!'               shift, and go to state 52
    '('               shift, and go to state 53

    $default  reduce using rule 48 (ExprS)

    ExprS     go to state 84
    Expr      go to state 62
    LValue    go to state 69
    Call      go to state 70
    Constant  go to state 71


state 40

   88 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 85


state 41

   80 Expr: T_New . '(' T_Identifier ')'

    '('  shift, and go to state 86


state 42

   81 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 87


state 43

   91 PrintStmt: T_Print . '(' ExprPC ')' ';'

    '('  shift, and go to state 88


state 44

   78 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 89


state 45

   79 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 90


state 46

   14 Type: T_Identifier .
   92 LValue: T_Identifier .
   95 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 91

    T_Dims        reduce using rule 14 (Type)
    T_Identifier  reduce using rule 14 (Type)
    $default      reduce using rule 92 (LValue)


state 47

  102 Constant: T_StringConstant .

    $default  reduce using rule 102 (Constant)


state 48

   99 Constant: T_IntConstant .

    $default  reduce using rule 99 (Constant)


state 49

  100 Constant: T_DoubleConstant .

    $default  reduce using rule 100 (Constant)


state 50

  101 Constant: T_BoolConstant .

    $default  reduce using rule 101 (Constant)


state 51

   68 Expr: '-' . Expr

    T_Null            shift, and go to state 34
    T_This            shift, and go to state 35
    T_New             shift, and go to state 41
    T_NewArray        shift, and go to state 42
    T_ReadInteger     shift, and go to state 44
    T_ReadLine        shift, and go to state 45
    T_Identifier      shift, and go to state 83
    T_StringConstant  shift, and go to state 47
    T_IntConstant     shift, and go to state 48
    T_DoubleConstant  shift, and go to state 49
    T_BoolConstant    shift, and go to state 50
    '-'               shift, and go to state 51
    '!'               shift, and go to state 52
    '('               shift, and go to state 53

    Expr      go to state 92
    LValue    go to state 69
    Call      go to state 70
    Constant  go to state 71


state 52

   77 Expr: '!' . Expr

    T_Null            shift, and go to state 34
    T_This            shift, and go to state 35
    T_New             shift, and go to state 41
    T_NewArray        shift, and go to state 42
    T_ReadInteger     shift, and go to state 44
    T_ReadLine        shift, and go to state 45
    T_Identifier      shift, and go to state 83
    T_StringConstant  shift, and go to state 47
    T_IntConstant     shift, and go to state 48
    T_DoubleConstant  shift, and go to state 49
    T_BoolConstant    shift, and go to state 50
    '-'               shift, and go to state 51
    '!'               shift, and go to state 52
    '('               shift, and go to state 53

    Expr      go to state 93
    LValue    go to state 69
    Call      go to state 70
    Constant  go to state 71


state 53

   62 Expr: '(' . Expr ')'
